# Shader2D

./: CMakeLists.txt  CONTRIBUTING.md  README.md
assets/engine/shaders/: core_default.frag  core_default.vert
note/: cpp.md  general.md  mem.md  route.md
note/debug/: MyGameCilent.cap
src/: pch.h
src/Client/: ExampleLayer.cpp  ExampleLayer.h  GameApp.cpp  GameApp.h  main.cpp
src/Engine/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Math.h  Timestep.h  Window.h
src/Engine/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
src/Engine/Input/: Input.h  KeyCodes.h
src/Engine/Renderer/: Buffer.cpp  Buffer.h  Camera.h  OrthographicCamera.cpp  OrthographicCamera.h  RenderCommand.cpp  RenderCommand.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  SubTexture2D.cpp  SubTexture2D.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
src/Platform/Desktop/: DesktopWindow.cpp  DesktopWindow.h  Input.cpp
src/Platform/Input/: Input.cpp  Input.h
src/Platform/OpenGL/: BatchRenderer.cpp  BatchRenderer.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  Shader.cpp  Shader.h
src/Platform/Window/: GlfwWindow.cpp  GlfwWindow.h  Window.cpp  Window.h
